# octo-site

./: Cargo.toml  Dioxus.toml  README.md  render.yaml
assets/: main.css  octopus.png~
deploy/: index.html
deploy/assets/: favicon-8339f216b1ff4d9d.ico.br  main-19d900764e02831e.css  main-19d900764e02831e.css.br  octo-site-9c683e88e7599692.js  octo-site-9c683e88e7599692.js.br  octo-site_bg-1bfbeb144d8931d5.wasm  octo-site_bg-1bfbeb144d8931d5.wasm.br
src/: main.rs
